# pingpong_sdl

./: CMakeLists.txt
src/: CMakeLists.txt  ball.cpp  bat.cpp  entity.cpp  game.cpp  keystate.cpp  main.cpp  texture2d.cpp
src/include/: ball.h  bat.h  entity.h  game.h  keystate.h  texture2d.h
src/tmath/: CMakeLists.txt
src/tmath/include/: point2.h  rect2.h  tmath.h  vector2.h
src/tmath/src/: vector2.cpp
